# sheaf

./: .dockerignore  .env.aio.example  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.aio  Dockerfile.backend  Dockerfile.web  FAQ.md  MAINTAINERS.md  README.md  SECURITY-PGP-KEY.asc  SECURITY.md  alembic.ini  docker-compose.aio.yml  docker-compose.devmode.yml  docker-compose.test.yml  docker-compose.tls.yml  docker-compose.yml  pyproject.toml  run_devmode.sh  run_tests.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/scripts/: with-retry.sh
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 105395daaa47_add_account_status_email_verification_.py  5137a5094b37_add_uploaded_files_table_and_remove_.py  9706550595b1_add_users_disable_cdn_during_ddos_column.py  a1b2c3d4e5f6_add_replace_fronts_default_to_systems.py  a7b8c9d0e1f2_add_safety_applies_to_reminders.py  a83c4a7a3905_add_is_admin_to_users.py  a9d15deeee25_add_client_name_to_trusted_devices.py  b1e2f3a4c5d6_add_can_upload_animated_images.py  b2c3d4e5f6a7_add_signup_ip_to_users.py  b7e1f2c3d456_add_delete_confirmation_to_systems.py  b8c9d0e1f2g3_add_notes_to_members_and_systems.py  c2f3a4b5d6e7_add_restrict_voting_to_fronters.py  c3d4e5f6a7b8_add_invite_code_id_to_users.py  c6d42e8a1ef5_initial_schema.py  c8d3e4f5a678_add_date_format_to_systems.py  c9d0e1f2g3h4_add_messages.py  d0e1f2g3h4i5_add_push_device_tokens.py  d3a4b5c6e7f8_add_admin_audit_events.py  d4e5f6a7b8c9_add_password_reset_fields_to_users.py  d9e4f5a6b789_add_storage_used_bytes_to_users.py  e0f5a6b7c890_add_member_limit_to_users.py  e1f2g3h4i5j6_add_front_audit_events.py  e4b5c6d7f8a9_add_admin_audit_session_apikey.py  e5f6a7b8c9d0_add_client_settings_table.py  f1a2b3c4d567_add_api_keys_table.py  f2g3h4i5j6k7_collapse_mobile_push_types.py  f5c6d7e8a9b0_add_user_suspension_fields.py  f6a7b8c9d0e1_add_deletion_fields_and_job_runs.py  g3h4i5j6k7l8_push_device_enabled_label.py  g6d7e8a9b0c1_add_admin_audit_suspend_dossier.py  g7h8i9j0k1l2_add_server_announcements.py  h4i5j6k7l8m9_channel_paused_by_sender.py  h7e8a9b0c1d2_add_admin_audit_ban_unban.py  h8i9j0k1l2m3_add_newsletter_opt_in.py  i5j6k7l8m9n0_add_import_jobs.py  i8f9b0c1d2e3_add_admin_audit_recovery_invite_job.py  i9j0k1l2m3n4_add_can_upload_images_to_users.py  j0k1l2m3n4o5_add_login_lockout_to_users.py  j6k7l8m9n0o1_medium_fixes_schema.py  j9a0b1c2d3e4_add_export_failed_attempts.py  (+35 more)
docker/aio/: Caddyfile  app-start.sh  cloudflared.conf  entrypoint.sh  init-secrets.sh  redis.conf  supervisord.conf
docs/: CLIENT_DESIGN.md  IMPORT.md  METRICS.md  OPENPLURAL.md  SELFHOSTING.md  VERIFYING.md
nginx/: dev-tls.conf.template
scripts/: seed_bulk_system.py  verify-release.sh
selfhost-utils/cf-image-worker/: README.md  package.json  wrangler.toml
selfhost-utils/cf-shield/: README.md  cf-shield
sheaf/: __init__.py  config.py  crypto.py  database.py  encrypted_fields.py  files.py  image_processing.py  main.py  redact.py  request.py  request_context.py  timezones.py
sheaf/auth/: dependencies.py  jwt.py  lockout.py  passwords.py  sessions.py  totp.py  trusted_devices.py
sheaf/middleware/: body_size.py  origin_check.py  rate_limit.py
sheaf/models/: __init__.py  activity_event.py  base.py  (+37 more)
sheaf_dev/: __init__.py  jobs.py  pyproject.toml
tests/: _import_runner_helpers.py  _totp_helpers.py  conftest.py  test_account_activity.py  test_account_deletion.py  test_account_export_completeness.py  test_account_lockout.py  test_admin.py  test_admin_audit.py  test_admin_ban.py  test_admin_emergency.py  test_admin_recovery.py  test_admin_small_actions.py  test_admin_step_up.py  test_admin_suspend_dossier.py  test_ampersand_import_unit.py  test_analytics_api.py  test_analytics_unit.py  test_announcements.py  test_api_key_scope_coverage.py  test_api_keys.py  test_apns_dev_gate.py  test_auth.py  test_bio_uploads_disabled.py  test_body_size_middleware.py  test_client_settings.py  test_config_database_url.py  test_crypto.py  test_custom_field_select.py  test_devices.py  test_email_events.py  test_encrypted_fields_registry.py  test_export.py  test_export_builder_streaming.py  test_export_import_parity.py  test_external_images_disabled.py  test_field_encryption_binding.py  test_file_cleanup_reference_forms.py  test_file_signing.py  test_files.py  (+91 more)
web/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
(+353 files in other folders)
