[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sheaf"
version = "0.1.0"
description = "Open-source plural system tracking"
license = "AGPL-3.0-or-later"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "argon2-cffi>=23.1.0",
    "PyJWT>=2.9.0",
    "pyotp>=2.9.0",
    "cryptography>=44.0.0",
    "redis[hiredis]>=5.0.0",
    "python-multipart>=0.0.18",
    "email-validator>=2.1.0",
    "aiofiles>=24.1.0",
]

[project.optional-dependencies]
s3 = ["boto3>=1.35.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "ruff>=0.9.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
"sheaf/models/*.py" = ["F821"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]
