[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sheaf"
version = "1.3.0"
description = "Open-source plural system tracking"
license = "AGPL-3.0-or-later"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.14.2",
    "argon2-cffi>=23.1.0",
    "PyJWT>=2.9.0",
    "pyotp>=2.9.0",
    "redis[hiredis]>=5.0.0",
    "PyNaCl>=1.5.0",
    "python-multipart>=0.0.31",
    "email-validator>=2.1.0",
    "aiofiles>=24.1.0",
    "altcha>=0.2.0",
    "httpx[http2]>=0.28.0",
    "pywebpush>=2.0.0",
    "croniter>=2.0.0",
    "prometheus-client>=0.20.0",
    "Pillow>=12.3.0",  # 12.3.0 patches 8 image/font-parsing CVEs; all <12.3.0 vulnerable
    "nh3>=0.2.18",
    # Bundled IANA tz database so zoneinfo works deterministically regardless of
    # the container base image (python:3.12-slim does not reliably ship
    # /usr/share/zoneinfo). Backs System.timezone validation + rendering.
    "tzdata>=2024.1",
]

[project.optional-dependencies]
s3 = ["boto3>=1.35.0"]
ses = ["boto3>=1.35.0"]
sendgrid = ["httpx>=0.28.0"]
smtp = ["aiosmtplib>=5.1.1"]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "ruff>=0.9.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
"sheaf/models/*.py" = ["F821"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]
markers = [
    "admin_auth_password: requires server running with ADMIN_AUTH_LEVEL=password",
    "admin_auth_totp: requires server running with ADMIN_AUTH_LEVEL=totp",
    "saas: requires server running with SHEAF_MODE=saas",
    "selfhosted: requires server running with SHEAF_MODE=selfhosted (skipped under saas)",
    "rate_limit: requires server running with RATE_LIMIT_ENABLED=true",
    "uploads_disabled: requires server running with ALLOW_IMAGE_UPLOADS=false",
    "bio_uploads_disabled: requires server running with ALLOW_BIO_IMAGES=false",
    "external_images_disabled: requires server running with ALLOW_EXTERNAL_IMAGES=false",
]
