[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sheaf-dev"
version = "0.1.0"
description = "Dev-only tools for Sheaf — destructive jobs that must NOT exist in production"
license = "AGPL-3.0-or-later"
requires-python = ">=3.12"
dependencies = []

[tool.setuptools]
# The project root IS the sheaf_dev package (pyproject.toml lives inside it).
# Tell setuptools to treat this directory as the package root.
packages = ["sheaf_dev"]
package-dir = {"sheaf_dev" = "."}
